--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <body onload="handleOrientationChange()">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Blackjack</title>
@@ -8,6 +9,8 @@
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
+    <img id="myImage" src="TemplateData/RotateGIF.gif" alt="My Image" style="display: none;">
+    <img id="myImage2" src="TemplateData/White.jpg" alt="My Image" style="display: none;">
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=540></canvas>
       <div id="unity-loading-bar">
@@ -37,6 +40,25 @@
       // Modify or remove this function to customize the visually presented
       // way that non-critical warnings and error messages are presented to the
       // user.
+
+      function handleOrientationChange() {
+        if (window.orientation === 0 || window.orientation === 180) {
+          // Portrait orientation
+          console.log("potrait mode");
+          document.getElementById("myImage").style.display = "block";
+          document.getElementById("myImage2").style.display = "block";
+          // Perform actions specific to portrait orientation
+        } else if (window.orientation === 90 || window.orientation === -90) {
+          // Landscape orientation
+          console.log("landscape mode");
+          document.getElementById("myImage").style.display = "none";
+          document.getElementById("myImage2").style.display = "none";
+          // Perform actions specific to landscape orientation
+        }
+      }
+
+      window.addEventListener("orientationchange", handleOrientationChange);
+
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
