--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
+            //unityInstance.SetFullscreen(1);
           };
+            unityInstance.SetFullscreen(1);
         }).catch((message) => {
           alert(message);
         });
