--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
             //unityInstance.SetFullscreen(1);
-          };
-            unityInstance.SetFullscreen(1);
+            };
+            setTimeout(() => {
+                unityInstance.SetFullscreen(1);
+            }, 500);
         }).catch((message) => {
           alert(message);
         });
