--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       // Modify or remove this function to customize the visually presented
       // way that non-critical warnings and error messages are presented to the
       // user.
-
+      
       function handleOrientationChange() {
         if (window.orientation === 0 || window.orientation === 180) {
           // Portrait orientation
@@ -102,7 +102,7 @@
         // Avoid draining fillrate performance on mobile devices,
         // and default/override low DPI mode on mobile browsers.
         config.devicePixelRatio = 1;
-        //unityShowBanner('WebGL builds are not supported on mobile devices.');
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         canvas.style.width = "960px";
         canvas.style.height = "540px";
