--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <body onload="handleOrientationChange()">
+    <body onload="handleOrientationChange()"></body>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Blackjack</title>
@@ -40,7 +40,7 @@
       // Modify or remove this function to customize the visually presented
       // way that non-critical warnings and error messages are presented to the
       // user.
-      
+
       function handleOrientationChange() {
         if (window.orientation === 0 || window.orientation === 180) {
           // Portrait orientation
